# verity

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIVE_TESTNET.md  MUSIC_PROMPT.md  Makefile  README.md  SECURITY.md  VOICEOVER_PROMPT.md  eslint.config.mjs  lighthouserc.json  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
contract/: Cargo.toml  Odra.toml  README.md
contract/.cargo/: config.wasm.toml
contract/src/: lib.rs  verity.rs
data/fixtures/: expected_decisions.json  expected_reputation.json  ground_truth.json  sources.json
deployments/: testnet.json
docs/: ARCHITECTURE.md  BUILD_PLAN.md  DEMO.md  PITCH_DECK.md  PRD.md  PRODUCTION_PLAN.md  SEED_DATA.md  SPONSOR_DEFENSE.md  SUBMISSION.md  UI.md
e2e/: demo-mode.spec.ts  responsive.spec.ts
public/: pitch.html
scripts/: bench.ts  check_submission_readiness.ts  deploy_cep18.ts  deploy_rpc.ts  release-bump.ts  seed.ts  settle.ts  verify_reputation.ts  x402_roundtrip.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AnalystPanel.tsx  ConsumerLTVPanel.tsx  OracleTerminal.tsx  ReasoningLog.tsx  ReputationCurve.tsx  ReputationGauge.tsx  SuiteFooter.tsx  ValueTruthTable.tsx  VerityHero.tsx  WhyCasper.tsx
src/core/: consumer.ts  llm.test.ts  llm.ts  post.ts  reasoning.ts  reputation.ts  sources.ts  types.ts  verity.test.ts  x402.ts  (+1 more)
(+11 files in other folders)
