[package]
edition = "2021"
name = "verity"
version = "1.6.1"
repository = "https://github.com/edycutjong/verity"

[dependencies]
odra = { version = "2.7.0", features = [], default-features = false }
odra-casper-livenet-env = { version = "2.7.0", optional = true }

[features]
# Enables the livenet deploy binary: cargo run --bin verity_livenet --features livenet
livenet = ["odra-casper-livenet-env"]

[dev-dependencies]
odra-test = { version = "2.7.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }

[[bin]]
name = "verity_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "verity_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "verity_livenet"
path = "bin/deploy.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
